objects/Employee_Detail__c/Employee_Detail__c.object-meta.xml
<CustomObject>
    <label>Employee Detail</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>