objects/Employee_Detail__c/fields/Date_Of_Join__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Join__c</fullName>
    <label>Date Of Join</label>
    <type>Date</type>
</CustomField>