objects/Employee_Detail__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--- Select one ---</fullName>
            </value>
            <value>
                <fullName>Program Trainee</fullName>
            </value>
            <value>
                <fullName>Program Developer</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Technical Manager</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>