objects/Employee_Detail__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <label>Employee_Email</label>
    <type>Email</type>
</CustomField>