objects/Employee_Detail__c/fields/Number_Of_Projects_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Projects_Assigned__c</fullName>
    <label>Number Of Projects Assigned</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>