objects/Employee_Detail__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>