objects/Employee_Detail__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Dot Net</fullName>
            </value>
            <value>
                <fullName>Orcale</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>