objects/Employee_Detail__c/fields/Present_Location__c.field-meta.xml
<CustomField>
    <fullName>Present_Location__c</fullName>
    <label>Present Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>