objects/Employee_Detail__c/fields/Project_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Project_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project_Assigned</label>
    <type>Checkbox</type>
</CustomField>