objects/Employee_Detail__c/fields/Releivng_Date__c.field-meta.xml
<CustomField>
    <fullName>Releivng_Date__c</fullName>
    <label>Releivng Date</label>
    <type>DateTime</type>
</CustomField>